# FPS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak.20250801_084031  CONSOLE_CONNECTION_GUIDE.md  CONSOLE_SYSTEM_FIXED.md  CONSOLE_SYSTEM_UNIFIED.md  CRITICAL_FLASHING_TEST.md  DEBUG_CONSOLE_FIXED.md  FINAL_ACTION_PLAN.md  FINAL_ROOT_CAUSE_ANALYSIS.md  FLASHING_ISSUE_COMPLETE_SOLUTION.md  FLASHING_ISSUE_FINAL_RESOLUTION.md  FLASHING_ISSUE_RESOLUTION.md  FLASHING_ISSUE_SYSTEMATIC_ANALYSIS.md  FPS.sln  IMPLEMENTATION_SUMMARY.md  MinimalFlashTest.cpp  PROFESSIONAL_CONSOLE_DOCUMENTATION.md  README.md  SIMPLE_CONSOLE_FINAL.md  SYSTEMATIC_ROOT_CAUSE_ANALYSIS.md  TROUBLESHOOTING.md  UNIFIED_RENDERING_IMPLEMENTATION.md  build.ps1  build.sh  build_complete.ps1  debug_engine.bat  game.ps1  generate.bat  generate.sh  imgui.ini  setup_submodules.ps1  test_console.bat  test_console_connection.bat  test_console_system.bat  test_debug_console.bat  test_professional_console.bat  test_simple_console.bat  test_unified_console.bat  (+2 more)
.github/: AI_README.md
.github/prompts/: CLAUDE_PROMPTS.md  COPILOT_CHAT_CHEATSHEET.md  GEMINI_PROMPTS.md  OPENAI_PROMPTS.md  PERPLEXITY_PROMPTS.md  README.md
.github/prompts/AI-Integration/: copilot-instructions.md
.github/prompts/Advanced-Features/: 01_networking_multiplayer.prompt.md  02_scripting_modding.prompt.md  03_advanced_systems.prompt.md
.github/prompts/Core-Setup/: 01_project_overview.prompt.md  02_code_refactor_rules.prompt.md  03_build_system_ci.prompt.md
.github/prompts/Documentation/: 01_docs_release_notes.prompt.md
.github/prompts/Engine-Systems/: 01_engine_core.prompt.md  02_graphics_rendering.prompt.md  03_audio_system.prompt.md  04_physics_collision.prompt.md  05_collision_system.prompt.md
.github/prompts/Gameplay-Specialized/: 01_game_logic.prompt.md  02_projectile_system.prompt.md  03_shader_hlsl.prompt.md  04_console_integration.prompt.md
.github/prompts/Quality-Performance/: 01_optimization.prompt.md  02_testing_qa.prompt.md
.github/prompts/Tools-Development/: 01_spark_editor.prompt.md  02_assets_pipeline.prompt.md  03_build_deployment.prompt.md  04_debugging_profiling.prompt.md
Assets/Scenes/: level1.scene
Assets/Scripts/: PlayerController.as
FPS/: FPS.cpp  FPS.rc  FPS.vcxproj  FPS.vcxproj.filters  Resource.h
Shaders/Compiled/: BasicPS.cso  BasicVS.cso
Shaders/HLSL/: BasicPS.hlsl  BasicVS.hlsl  DebugVisualize.hlsl  EnvReflection.hlsl  PBRSurface.hlsl  SSAO.hlsl  Utils.hlsl
Spark Engine/: SparkEngine.rc
Spark Engine/Source/: AllEnums.h
SparkConsole/: CMakeLists.txt  CMakeLists.txt.backup_20250809_162446  CMakeLists.txt.backup_20250809_162510  CMakeLists_test.txt
SparkConsole/include/: CommandRegistry.h
SparkConsole/src/: CommandParser.cpp  CommandParser.h  CommandRegistry.cpp  ConsoleApp.cpp  ConsoleApp.h  main.cpp
SparkEditor/: BUILD_FIX_STATUS.md  BUILD_INTEGRATION_GUIDE.md  BUILD_STATUS_SUMMARY.md  CMakeLists.txt  ENHANCED_EDITOR_SUMMARY.md  FINAL_STATUS_REPORT.md  README_IMPLEMENTATION.md  README_SparkEngineEditor.md  SparkEditor.vcxproj  ULTIMATE_SUCCESS_REPORT.md
SparkEditor/Source/: build_fix.h  comprehensive_build_fix.h  final_build_fix.h  hackfix_EditorApplication.h  main.cpp  ultra_build_fix.h
SparkEditor/Source/AI/: SparkAILayout_stub.h
SparkEditor/Source/Animation/: AnimationTimeline.h
SparkEditor/Source/AssetBrowser/: AssetDatabase.cpp  AssetDatabase.h
SparkEditor/Source/AssetPipeline/: AdvancedAssetPipeline.h
SparkEditor/Source/BuildSystem/: BuildDeploymentSystem.cpp  BuildDeploymentSystem.h  SimpleBuildSystem.cpp  SimpleBuildSystem.h
SparkEditor/Source/Cloud/: SparkCloudSync.h
SparkEditor/Source/Communication/: EngineInterface.cpp.disabled  EngineInterface.h
SparkEditor/Source/Core/: DockPosition.h  EditorApplication.cpp  EditorApplication.h  EditorCrashHandler.cpp  EditorCrashHandler.h  EditorLayoutManager.cpp.disabled  EditorLayoutManager.h  EditorLogger.cpp  EditorLogger.cpp.disabled  EditorLogger.h  EditorPanel.cpp  EditorPanel.h  EditorTheme.cpp  EditorTheme.h  EditorUI.cpp  EditorUI.cpp.disabled  EditorUI.h  ProjectManager.cpp  ProjectManager.h  namespace_fix.h
SparkEditor/Source/Docking/: Spark3DDocking.h  SparkDockingSystem.cpp.disabled  SparkDockingSystem.h
SparkEditor/Source/Enums/: AudioSystemEnums.h  BuildSystemEnums.h  CoreEditorEnums.h  LevelStreamingEnums.h  ProfilerEnums.h  RenderingEnums.h  SceneSystemEnums.h  VersionControlEnums.h
SparkEditor/Source/Examples/: DockingSystemTest.cpp  EditorUIExample.cpp
SparkEditor/Source/Gizmos/: GizmoSystem.h
SparkEditor/Source/Integration/: ExternalConsoleIntegration.cpp  ExternalConsoleIntegration.h  SparkEngineIntegration.h  SparkFutureIntegration_stub.h
SparkEditor/Source/LevelStreaming/: LevelStreamingSystem.h
SparkEditor/Source/Lighting/: LightingTools.h
SparkEditor/Source/MaterialEditor/: MaterialEditor.h
SparkEditor/Source/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp.disabled  ConsolePanel.cpp.disabled2  ConsolePanel.h  HierarchyPanel.cpp.disabled  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneViewPanel.cpp  SceneViewPanel.h  SimpleConsolePanel.cpp  SimpleConsolePanel.h  SimpleHierarchyPanel.cpp  SimpleHierarchyPanel.h
SparkEditor/Source/Profiler/: PerformanceProfiler.cpp.disabled  PerformanceProfiler.h
SparkEditor/Source/Reflection/: ComponentReflection.h
SparkEditor/Source/SceneSystem/: SceneFile.h  SceneManager.cpp.disabled  SceneManager.h  SceneSerializer.h
SparkEditor/Source/Terrain/: TerrainEditor.h
SparkEditor/Source/Utils/: SparkConsole.cpp  SparkConsole.h
SparkEditor/Source/VR/: SparkVRInterface.h
SparkEditor/Source/VersionControl/: VersionControlSystem.h
SparkEditor/Source/VisualScripting/: VisualScriptingSystem.h
docs/: Doxyfile.txt  ENHANCEMENT_SUMMARY.md  README.md  README_Enhanced_Graphics.md  auto-update.sh  generate-docs.sh
docs/ai-integration/: AI_INTEGRATION_GUIDE.md
docs/wiki/: audio.html  camera.html  core.html  engine.html  game.html  graphics.html  index.html  input.html  physics.html  utils.html
(+281 files in other folders)
